<resources>
    <string name="contact_email">andronekomimi@gmail.com</string>
    <string name="app_name_short">DWBC</string>
    <string name="app_name">Don\'t Worry, Be Crafty!</string>
    <string name="welcome">Welcome</string>
    <string name="loading">Chargement des données &#8230;</string>
    <string name="cxn_alert">Information réseau</string>
    <string name="no_connection">Aucune connexion internet n\'est disponible en ce moment.\nVeuillez réessayer ultérieurement.</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="alert_loading_data">Une petite erreur s\'est produite redémarrer l\'application</string>
    <string-array name="nav_drawer_items">
        <item>Accueil</item>
        <item>Nouveau projet</item>
        <item>Projets soumis</item>
        <item>Projets sauvegardés</item>
        <item>Tutos</item>
        <item>Ateliers</item>
        <item>Join me!</item>
        <item>Blog</item>
        <item>Actualiser</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="btn_welcome">Accueil</string>
    <string name="presentation1">Bonjour à tous et à toutes !\nJe m\'appelle Rachel et je suis ravie de vous accueillir sur ma nouvelle application.</string>
    <string-array name="status_arrays">
        <item>Projet soumis</item>
        <item>Projet accepté</item>
        <item>Projet refusé</item>
        <item>Prototype en cours</item>
        <item>Prototype en attente de validation</item>
        <item>Prototype accepté</item>
        <item>Prototype refusé</item>
        <item>Réalisation en cours</item>
        <item>Réalisation terminée</item>
    </string-array>
    <string-array name="status_print_arrays">
        <item>Projet soumis</item>
        <item>Projet accepté</item>
        <item>Prototype en cours</item>
        <item>Prototype en attente de validation</item>
        <item>Prototype accepté</item>
        <item>Réalisation en cours</item>
        <item>Réalisation terminée</item>
    </string-array>
    <string-array name="type_arrays">
        <item>Carte: Anniversaire de naissance</item>
        <item>Carte: Saint Valentin</item>
        <item>Carte: Halloween</item>
        <item>Carte: Remerciements</item>
        <item>Carte: Félicitations</item>
        <item>Carte: Bonne année</item>
        <item>Carte: Fête des pères</item>
        <item>Carte: Fête des mères</item>
        <item>Carte: Éphéméride</item>
        <item>Carte: Prompt rétablissement</item>
        <item>Carte: Anniversaire de mariage</item>
        <item>Faire-Part: Mariage</item>
        <item>Faire-Part: Naissance</item>
        <item>Invitation: Occasion</item>
    </string-array>
    <string-array name="occasion_arrays">
        <item>Crémaillère</item>
        <item>Anniversaire</item>
        <item>Permis de conduire</item>
        <item>Examen</item>
        <item>Grossesse</item>
        <item>Autre</item>
    </string-array>
    <string-array name="gender_arrays">
        <item>Madame</item>
        <item>Monsieur</item>
        <item>Famille</item>
        <item>Groupe</item>
    </string-array>
    <string-array name="baby_arrays">
        <item>Fille</item>
        <item>Garçon</item>
    </string-array>
    <string-array name="age_arrays">
        <item>age</item>
        <item>Tranche d\'age</item>
    </string-array>
    <string-array name="expertise">
        <item>Débutant</item>
        <item>Faux débutant</item>
        <item>Pratique régulière</item>
        <item>Experte</item>
    </string-array>
    <string name="project_explane">Bonjouuur ! Nous avons besoin de quelques précisions pour bien définir le projet : type de cartes, thème, couleurs, délais, personnalisation &#8230;</string>
    <string name="project_name">Nom du projet</string>
    <string name="project_type">Type de projet</string>
    <string name="event_date">Date</string>
    <string name="nbr_years">Années de mariage</string>
    <string name="birthday">Date de naissance</string>
    <string name="people">Qui ou Pour qui ?</string>
    <string name="person1">Personne 1</string>
    <string name="person2">Personne 2</string>
    <string name="to_put_on_card">Afficher sur la carte</string>
    <string name="card_theme">Thématique</string>
    <string name="card_style">Style</string>
    <string name="project_order">Livraison</string>
    <string name="how_many_cards">Combien de cartes</string>
    <string name="un">1</string>
    <string name="zero">0</string>
    <string name="for_when">Pour quand ?</string>
    <string name="continu">Continuer</string>
    <string name="mission_impossible">Désolé nous n\'avons que 4 mains :(</string>
    <string name="infos_manquantes">Désolé il nous faut un peu plus d\'infos :)</string>
    <string name="back_in_time">Désolé nous ne remontons pas le temps ;-)</string>
    <string name="zero_card">Pas de carte du tout !?</string>
    <string name="anonymous_card">Carte anonyme</string>
    <string name="personalized_card">Carte nominative</string>
    <string name="sexe">Sexe</string>
    <string name="man">Homme</string>
    <string name="woman">Femme</string>
    <string name="alertMsg">Validation impossible</string>
    <string name="alertBox">Votre page contient une ou plusieurs erreurs indiquées en rouge sur le formulaire. Merci de revoir votre copie ;-p</string>
    <string name="color_set">Les couleurs</string>
    <string name="color_instruction">Choisis trois couleurs maximum</string>
    <string name="selected_colors">Couleurs choisies</string>
    <string name="color_warning">Trois couleurs maximum parce que trop de couleurs tue la couleur !\nClique sur une couleur pour la supprimer puis choisis-en une autre </string>
    <string name="personnalisation">Personnalisation</string>
    <string name="firstname">Prénom</string>
    <string name="age">Age</string>
    <string name="year">ans</string>
    <string name="validate">Valider</string>
    <string name="file">Joindre un fichier</string>
    <string name="nocolor_warning">Merci de choisir au moins une couleur</string>
    <string name="err_not_uniq">"Ce nom de projet existe déjà ! Il faut innover ;-)"</string>
    <string name="err_no_project">"Merci d'indiquer le nom du projet"</string>
    <string name="err_illegal_char">"Quelques caractères farfelue dans cette saisie &#8230;"</string>
    <string name="err_no_theme">"Merci d\'indiquer le thème"</string>
    <string name="err_no_style">"Merci d\'indiquer le style"</string>
    <string name="err_no_firstname">"Merci d\'indiquer un nom"</string>
    <string name="err_no_age">"Merci d\'indiquer l\'âge"</string>
    <string name="err_no_nbr_years">"Même pas les noces de coton ???"</string>
    <string name="err_illegal_date">"Petit problème de cohérence au niveau de date &#8230;"</string>
    <string name="err_no_address">"Merci d\'indiquer une adresse"</string>
    <string name="err_too_big">"Pour de gros projet me contacter à l'adresse mail : %1s"</string>
    <string name="logistic">Logistique</string>
    <string name="time">Lieu et heure</string>
    <string name="hour">Heure</string>
    <string name="poids">Poids</string>
    <string name="taille">Taille</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="address">Adresse</string>
    <string name="occaz">Occasion</string>
    <string name="add_baby">Ajouter un bébé</string>
    <string name="alert_check">Ultime check !</string>
    <string name="alert_dialog_send">Soumission</string>
    <string name="alert_dialog_rec">Sauvegarder</string>
    <string name="alert_dialog_cancel">Oops ! </string>
    <string name="your_project">Ton projet</string>
    <string name="infos">Infos complémentaires</string>
    <string name="confirm_email">Email contact</string>
    <string name="reg_failed">Echec de l\'enregistrement</string>
    <string name="reg_succed">Enregistrement effectué ! Let\'s GO !</string>
    <string name="email_subject_submission">[DWBeCreafty] Soumission de projet</string>
    <string name="email_body_submission">Bonjour Rachel,\nCi-joint les détails du projet que j\'aimerais réaliser.\nInfos complémentaires: %1$s \nAmicalement.</string>
    <string name="btn_modif">Modifier</string>
    <string name="btn_submit">Soumission</string>
    <string name="save_date">Date de sauvegarde</string>
    <string name="order_date">Date de livraison</string>
    <string name="btn_resume">Reprendre</string>
    <string name="reload_advice">Si vous venez de sauvegarder un projet, penser à actualiser l\'application</string>
    <string name="btn_reload">Actualiser</string>
    <string name="btn_delete">Supprimer</string>
    <string name="modif_prj">Modification du projet</string>
    <string name="modif_advice">Pour modifier le nom du projet, son type ou les détails personnalisés, merci de supprimer le projet et le recréer</string>
    <string name="see_details">Cliquer pour voir les données personnalisées</string>
    <string name="prototype">Prototype</string>
    <string name="no_prototype">pas encore de prototype</string>
    <string name="btn_proto">Voir proto</string>
    <string name="btn_ok_proto">Accepter proto</string>
    <string name="btn_no_proto">Revoir proto</string>
    <string name="email_subject_no_proto">[DWBeCreafty] Révision de prototype</string>
    <string name="email_body_no_proto">Bonjour Rachel,\nMerci pour ton travail.\nNéanmoins ce prototype ne me convient pas. Infos complémentaires : %1$s \nAmicalement.</string>
    <string name="err_no_proto">"Merci de préciser le motif de la révision"</string>
    <string name="load_existing_project">Entrez votre email de contact pour charger vos projets</string>
    <string name="worksphop">Atelier</string>
    <string name="theme">Thème :</string>
    <string name="town">Ville :</string>
    <string name="date">Date :</string>
    <string name="price">Prix :</string>
    <string name="remaning_place">Places restantes :</string>
    <string name="btn_signin">S\'inscrire</string>
    <string name="btn_complet">Complet</string>
    <string name="name_firstname">Nom et prénom</string>
    <string name="phone_number">Numéro de tél</string>
    <string name="level">Niveau d\'expertise</string>
    <string name="nbr_participants">Accompagnateurs ?</string>
    <string name="inscription">Inscription à l\'atelier \"%1$s\"</string>
    <string name="btn_cancel">Annuler</string>
    <string name="err_missing_info">"Merci de remplir ce champ"</string>
    <string name="tutorial">Tutoriel</string>
    <string name="title">Titre :</string>
    <string name="availability">Disponibilité :</string>
    <string name="available">disponible</string>
    <string name="not_available">à la demande</string>
    <string name="btn_get_tuto">Télécharger</string>
    <string name="btn_demand">Demander</string>
    <string name="demand_return">Merci ! Votre demande a bien été prise en compte.</string>
    <string name="stampingup">Stampin\'Up</string>
    <string name="stampingup1">Stampin\'Up existe depuis plus de 25 ans aux États-Unis, et depuis 5 ans en France et en Europe. Elle est considérée comme leader dans le domaine du scrapbooking.\n\nActuellement, plus de 40 000 démonstratrices enseignent le Stamp\'Art et font partager leur enthousiasme pour l\'estampage, le Scrapbooking et la fabrication de cartes.</string>
    <string name="join_my_team">Pour rejoindre l\'aventure et devenir ma filleule</string>
    <string name="name">Nom</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="btn_send">Envoyer</string>
    <string name="messagebody_format">Bonjour Rachel\n\n %1$s\n\n %2$s (%3$s)</string>
    <string name="empty_field">Merci de remplir ce champ :-)</string>
</resources>