<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
            style="@style/MediumTurquoise2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/stampingup"
            android:textStyle="bold" />

        <TextView
            style="@style/MediumHGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stampingup1" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:background="@color/turquoise2" />

        <TextView
            style="@style/MediumTurquoise3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/join_my_team" />

        <EditText
            android:id="@+id/name"
            style="@style/MediumHGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/turquoise1"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/email"
            style="@style/MediumHGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/turquoise1"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"  />

        <EditText
            android:id="@+id/message"
            style="@style/MediumHGray"
            android:layout_width="match_parent"
            android:layout_height="@dimen/message_height"
            android:layout_marginBottom="5dp"
            android:background="@color/turquoise1"
            android:gravity="left|top"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <Button
            android:id="@+id/envoyer"
            style="@style/btnStyleActionTurquoise2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/btn_send" />
    </LinearLayout>

</ScrollView>