<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
            android:id="@+id/perso"
            style="@style/MediumTurquoise2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/personnalisation" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/turquoise2" />

        <TextView
            style="@style/MediumHGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/file" />

        <ImageView
            android:id="@+id/file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/file"
            android:paddingTop="10dp"
            android:src="@drawable/ic_content_new_picture" />

        <TextView
            style="@style/MediumTurquoise2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/infos" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/turquoise2" />

        <EditText
            android:id="@+id/infos"
            android:layout_width="match_parent"
            android:layout_height="@dimen/infos_height"
            android:layout_marginBottom="5dp"
            android:gravity="left|top"
            android:hint="@string/infos"
            android:inputType="textMultiLine" />

        <TextView
            style="@style/MediumTurquoise2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/logistic" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/turquoise2" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp" >

            <TextView
                style="@style/MediumGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:text="@string/how_many_cards" />

            <EditText
                android:id="@+id/card_num"
                style="@style/MediumHGray"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="15"
                android:text="@string/un" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <TextView
                style="@style/MediumGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/for_when" />

            <Button
                android:id="@+id/select_date"
                style="@style/btnStyleActionTurquoise2Inv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_continue"
            style="@style/btnStyleActionTurquoise2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/validate" />
    </LinearLayout>

</ScrollView>