<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/MediumPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/color_set" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#DE3764" />

        <TextView
            style="@style/MediumGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/color_instruction" />

        <GridView
            android:id="@+id/color_grid1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/gridview_height"
            android:background="#FAFAFA"
            android:gravity="center_horizontal"
            android:numColumns="10"
            android:paddingBottom="10dp" >
        </GridView>

        <TextView
            style="@style/MediumGray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_colors" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="20dp" >

            <ImageView
                android:id="@+id/selected_color1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent" />

            <ImageView
                android:id="@+id/selected_color2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent" />

            <ImageView
                android:id="@+id/selected_color3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <TextView
            android:id="@+id/perso"
            style="@style/MediumPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/personnalisation" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#DE3764" />

        <RadioGroup
            android:id="@+id/nominalchoice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/anonyme"
                style="@style/MediumPink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/rb_pink"
                android:checked="true"
                android:paddingRight="10dp"
                android:text="@string/anonymous_card" />

            <RadioButton
                android:id="@+id/not_anonyme"
                style="@style/MediumPink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/rb_pink"
                android:text="@string/personalized_card" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/MediumGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/firstname" />

                <EditText
                    android:id="@+id/firstname"
                    style="@style/MediumHGray"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/MediumGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingRight="10dp"
                    android:text="@string/sexe" />

                <RadioGroup
                    android:id="@+id/sexechoice"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/male"
                        style="@style/MediumPink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_pink"
                        android:paddingRight="10dp"
                        android:text="@string/man" />

                    <RadioButton
                        android:id="@+id/female"
                        style="@style/MediumPink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_pink"
                        android:text="@string/woman" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/MediumGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dp"
                    android:text="@string/age" />

                <EditText
                    android:id="@+id/age"
                    style="@style/MediumHGray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
                
            </LinearLayout>
        </LinearLayout>
        
         <Button
            android:id="@+id/btn_continue"
            style="@style/btnStyleActionPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/continu" />
        
    </LinearLayout>

</ScrollView>